--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -49,9 +49,6 @@
         .bold-text {
             font-weight: bold;
         }
-        .flag {
-            vertical-align: middle;
-        }
     </style>
 </head>
 <body>
@@ -122,7 +119,7 @@
             });
         }
 
-        function displayTable(containerId, rows, actualResults = null) {
+        function displayTable(containerId, rows) {
             const boldText = [
                 'Group Stage Predictions', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F', 
                 'Knockout Stage Predictions', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final', 
@@ -130,36 +127,13 @@
             ];
 
             let tableHTML = '<table>';
-            rows.forEach((row, rowIndex) => {
+            rows.forEach(row => {
                 tableHTML += '<tr>';
-                row.forEach((cell, cellIndex) => {
+                row.forEach(cell => {
                     const cellContent = cell.trim();
                     const flagImg = flags[cellContent] ? `<img src="${flags[cellContent]}" class="flag"> ` : '';
                     const cellClass = boldText.includes(cellContent) ? 'bold-text' : '';
                     tableHTML += `<td class="${cellClass}">${flagImg}${cellContent}</td>`;
-
-                    if (actualResults && rowIndex > 0 && cellIndex === 0) {
-                        const actualResult = actualResults.find(resultRow => resultRow.includes(cellContent));
-                        if (actualResult) {
-                            const actualScore1 = parseInt(actualResult[1]);
-                            const actualScore2 = parseInt(actualResult[2]);
-                            const predictedScore1 = parseInt(row[cellIndex + 1]);
-                            const predictedScore2 = parseInt(row[cellIndex + 2]);
-
-                            let participantScore = 0;
-                            if (predictedScore1 === actualScore1 && predictedScore2 === actualScore2) {
-                                participantScore = 10;
-                            } else if ((actualScore1 - actualScore2 === predictedScore1 - predictedScore2) && (actualScore1 > actualScore2 && predictedScore1 > predictedScore2 || actualScore1 < actualScore2 && predictedScore1 < predictedScore2)) {
-                                participantScore = 8;
-                            } else if (actualScore1 === actualScore2 && predictedScore1 === predictedScore2) {
-                                participantScore = 5;
-                            } else if ((actualScore1 > actualScore2 && predictedScore1 > predictedScore2) || (actualScore1 < actualScore2 && predictedScore1 < predictedScore2)) {
-                                participantScore = 5;
-                            }
-
-                            tableHTML += `<td>${participantScore}</td>`;
-                        }
-                    }
                 });
                 tableHTML += '</tr>';
             });
@@ -171,12 +145,7 @@
             const participantSelect = document.getElementById('participantSelect');
             const selectedFile = participantSelect.value;
             if (selectedFile) {
-                loadCSV(selectedFile, rows => {
-                    loadCSV('./results_csv/Actual_Results.csv', actualResults => {
-                        actualResults = actualResults.map(resultRow => resultRow.map(cell => cell.trim())); // Trim cells in actualResults
-                        displayTable('participantPredictions', rows, actualResults);
-                    });
-                });
+                loadCSV(selectedFile, rows => displayTable('participantPredictions', rows));
             } else {
                 document.getElementById('participantPredictions').innerHTML = '';
             }
